# generic_media_backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.env
src/: main.rs
src/api/: authentication.rs  changelog.rs  media.rs  mod.rs  user.rs
src/api/shared/: list.rs  mod.rs
src/database/: database_context.rs  mod.rs
src/database/repositories/: friendship_repo.rs  mod.rs  user_repo.rs
src/middleware/: bearer_validator.rs  cookie_validator.rs  mod.rs
src/migrations/: mod.rs  user_migration.rs
src/model/: friend.rs  friendship.rs  mod.rs  user.rs
src/model/states/: app_state.rs
src/utils/: mod.rs  version.rs
